<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#F0F0F0"
    tools:context=".FragmentA"
    android:orientation="vertical">

    <TextView
        android:id="@+id/InputTypeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/InputType"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"/>

    <Spinner
        android:id="@+id/InputTypeSpinner"
        android:layout_width="350dp"
        android:background="#F0F0F0"
        android:layout_height="wrap_content"
        android:layout_below="@+id/InputTypeText"
        android:spinnerMode="dropdown"
        android:paddingStart="10dp"
        android:layout_marginLeft="10dp"
        android:paddingEnd="10dp"/>

    <TextView
        android:id="@+id/ActivityTypeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ActivityType"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"/>

    <Spinner
        android:id="@+id/ActivityTypeSpinner"
        android:layout_width="350dp"
        android:background="#F0F0F0"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ActivityTypeText"
        android:spinnerMode="dropdown"
        android:paddingStart="10dp"
        android:layout_marginLeft="10dp"
        android:paddingEnd="10dp"/>

    <Button
        android:id="@+id/startButton"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:text="@string/StartButton"
        app:cornerRadius="5dp"
        android:layout_marginTop="120dp"
        android:layout_marginLeft="20dp"
        android:textColor="#3A3838"
        android:backgroundTint="#CDCECF"/>

    <View
        android:id="@+id/bottomScrim"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:alpha="0.85"
        android:layout_marginTop="432dp"
        android:background="@color/black" />

</LinearLayout>